--- a/app/Resources/views/minventar.html
+++ b/app/Resources/views/minventar.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div id="minventar" class="container-fluid">
 
     <h1 id="heading">Resources</h1>
 
@@ -34,67 +34,18 @@
                             id="resources-radio" type="radio" name="overviewtype" checked>Resources</label>
                 </div>
             </div>
-            <div class="col-sm-1">
+            <div class="col-sm-2">
                 <div class="radio">
-                    <label><input id="resources-type-radio" type="radio" name="overviewtype">Resource types</label>
+                    <label><input id="resources-types-radio" type="radio" name="overviewtype">Resource types</label>
                 </div>
             </div>
 
         </div>
     </div>
 
-    <div id="creation-dialog" style="visibility: hidden">
-        <div class="row"><br></div>
-        <div class="col-sm-6">
-            <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <label class="control-label col-sm-2">Name:</label>
-
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="input-name" placeholder="Enter name">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2">Is bundle:</label>
-
-                    <div class="col-sm-10">
-                        <input type="checkbox" id="input-is-bundle">
-                    </div>
-                </div>
-
-                <!--example Attribute-->
-
-                <div class="form-group">
-
-                    <div class="col-sm-6">
-                        <input type="text" class="form-control" id="attr1-name" placeholder="Enter name">
-                    </div>
-                    <div class="dropdown col-sm-6">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Type
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#">String</a></li>
-                            <li><a href="#">Text</a></li>
-                            <li><a href="#">Number</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-6 pull-right text-right">
-                        <button type="submit" class="btn btn-primary">Create</button>
-                        <button type="button" class="btn btn-default">Cancel</button>
-                    </div>
-                    <div class="col-sm-6">
-                        <button type="button" class="btn btn-default">Add attribute</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="row"><br></div>
-    </div>
+    <div class="row"><br></div>
+    <div id="creation-dialog"></div>
+    <div class="row"><br></div>
 
     <div class="row"><br></div>
 
