-  finished the admin area for type creation

--- a/web/templates/attributeDefinitionTemplate.html
+++ b/web/templates/attributeDefinitionTemplate.html
@@ -1,12 +1,12 @@
-<div id="attr-definition">
+<div class="attr-definition">
     <div class="row">
         <div class="col-sm-5">
-            <input type="text" class="form-control" id="new-attr-name" value={{attrvalue}}>
+            <input type="text" class="form-control" id="attr-name" value={{attrvalue}} required>
         </div>
         <div class="col-sm-2">
             <div class="form-group">
 
-                <select id="new-attr-type" class="form-control" style="width: auto">
+                <select id="attr-type" class="form-control" style="width: auto">
                     {{attrtype}}
                 </select>
 
