--- a/web/templates/resourceCreationDialogTemplate.html
+++ b/web/templates/resourceCreationDialogTemplate.html
@@ -1,3 +1,4 @@
+<div class="row"><br></div>
 <div class="col-sm-6">
     <form class="form-horizontal" role="form">
         <div class="form-group">
