-  admin area for resource creation almost finished

--- a/web/templates/attributeDefinitionTemplate.html
+++ b/web/templates/attributeDefinitionTemplate.html
@@ -1,7 +1,8 @@
 <div class="attr-definition">
     <div class="row">
         <div class="col-sm-5">
-            <input type="text" class="form-control" id="attr-name" value={{attrvalue}} required>
+            <input type="text" class="form-control" id="attr-name" required
+                   placeholder="Enter attribute name" value={{attrvalue}}>
         </div>
         <div class="col-sm-2">
             <div class="form-group">
