--- a/app/Resources/views/minventar.html
+++ b/app/Resources/views/minventar.html
@@ -52,57 +52,12 @@
     <div id="creation-dialog"></div>
     <div class="row"><br></div>
     <div class="row"><br></div>
-    <div id="filter-dialog" class="well well-sm">
-        <form id="filter-form" class="form-inline" role="form">
-            <div class=" pull-right text-right">
-                <div class="form-group ">
-                    <label class="control-label ">Name:</label>
-                    <input type="text" class="form-control" id="name-filter" placeholder="Enter name" required>
+    <div id="filter-dialog">
 
-                </div>
-                <div class="form-group col-sm4"><label class="control-label ">Is bundle:</label>
-                    <input type="checkbox" id="is-bundle-filter">
-
-                </div>
-                <div class="form-group col-sm4">
-                    <button id="filter-btn" type="submit" class="btn btn-primary">Filter</button>
-                    <button id="filter-reset-btn" type="button" class="btn btn-default">Reset</button>
-                </div>
-            </div>
-        </form>
-        <div class="row"><br></div>
     </div>
 
 
-    <div id="data-table">
-        <!--placeholder-->
-        <table class="table table-bordered table-hover">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Attributes</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td>Mein Tisch</td>
-                <td>Tisch</td>
-                <td>Typ: Holz, Höhe: 1,80cm</td>
-            </tr>
-            <tr>
-                <td>Daniel</td>
-                <td>Mitarbeiter</td>
-                <td>Nachname: Schulz</td>
-            </tr>
-            <tr>
-                <td>Nostromo</td>
-                <td>Raum</td>
-                <td>Fläche: 50m²</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <div id="data-table"></div>
 
 </div>
 </body>
