- implemented resource type overview

--- a/web/templates/typeCreationDialogTemplate.html
+++ b/web/templates/typeCreationDialogTemplate.html
@@ -21,7 +21,7 @@
 
         <div id="add-attr-dialog" class="row">
             <div class="col-sm-5">
-                <input type="text" class="form-control" id="new-attr-name" placeholder="Add a new attribute">
+                <input type="text" class="form-control" id="new-attr-name" placeholder="Add new attribute">
             </div>
             <div class="col-sm-2">
                 <div class="form-group">
