- extended resource overview - added put methods to the backend service

--- a/web/templates/resourcesDataTableTemplate.html
+++ b/web/templates/resourcesDataTableTemplate.html
@@ -1,27 +1,12 @@
-<!--placeholder-->
 <table class="table table-bordered table-hover">
     <thead>
     <tr>
-        <th>Name</th>
-        <th>Type</th>
-        <th>Attributes</th>
+        <th class="col-sm-3">Name</th>
+        <th class="col-sm-3">Type</th>
+        <th class="col-sm-6">Attributes</th>
     </tr>
     </thead>
     <tbody>
-    <tr>
-        <td>Mein Tisch</td>
-        <td>Tisch</td>
-        <td>Typ: Holz, Höhe: 1,80cm</td>
-    </tr>
-    <tr>
-        <td>Daniel</td>
-        <td>Mitarbeiter</td>
-        <td>Nachname: Schulz</td>
-    </tr>
-    <tr>
-        <td>Nostromo</td>
-        <td>Raum</td>
-        <td>Fläche: 50m²</td>
-    </tr>
+    {{data}}
     </tbody>
 </table>
