--- a/web/templates/typeUpdateDialogTemplate.html
+++ b/web/templates/typeUpdateDialogTemplate.html
@@ -5,11 +5,12 @@
             <label class="control-label col-sm-2">Name:</label>
 
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="input-name" placeholder="Enter name" required>
+                <input type="text" class="form-control" id="input-name" placeholder={{name}} required
+                       value={{name}}>
             </div>
         </div>
 
-        <div class="row actions-bar">
+        <div class="row actions-bar" id={{id}}>
             <div class="col-sm-8 pull-right text-right">
                 <button id="save-btn" type="submit" class="btn btn-primary">Save</button>
                 <button id="delete-btn" type="button" class="btn btn-danger">Delete</button>
