- extended resource overview  -implemented resource editing and filtering

--- a/web/templates/attributeSelectionTemplate.html
+++ b/web/templates/attributeSelectionTemplate.html
@@ -1,4 +1,4 @@
-<div class="form-group attr-definition">
+<div class="attr-definition form-group">
     <label id="attr-name-label" class="control-label col-sm-2">{{attrName}}:</label>
 
     <div class="col-sm-10">
