--- a/web/templates/typeUpdateDialogTemplate.html
+++ b/web/templates/typeUpdateDialogTemplate.html
@@ -1,4 +1,5 @@
-<div id="type-update-dialog" class="col-sm-6">
+<div id="update-dialog" class="col-sm-6">
+    <div id="mongo-id" style="color: grey">{{id}}</div>
     <div class="row"><br></div>
     <form id="update-form" class="form-horizontal" role="form">
         <div class="form-group">
