--- a/web/templates/resourceUpdateDialogTemplate.html
+++ b/web/templates/resourceUpdateDialogTemplate.html
@@ -1,6 +1,8 @@
-<div class="row"><br></div>
 <form id="update-form" class="form-horizontal" role="form">
-    <div id="resource-update-dialog" class="col-sm-6">
+    <div id="mongo-id" style="color: grey">{{id}}</div>
+    <div class="row"><br></div>
+
+    <div id="update-dialog" class="col-sm-6">
 
         <div class="form-group">
             <label class="control-label col-sm-2">Name:</label>
@@ -14,7 +16,7 @@
 
 
             <div class="col-sm-10">
-                <select id="input-type" class="form-control" style="width: auto" required>
+                <select id="input-type" class="form-control" style="width: auto" required disabled>
                     {{types}}
                 </select>
             </div>
@@ -25,6 +27,10 @@
         <div id="input-content"></div>
 
         <div class="row actions-bar" id={{id}}>
+            <div class="col-sm-4 ">
+                <button id="parent-btn" type="button" class="btn btn-primary" style="visibility: hidden">Parent
+                </button>
+            </div>
             <div class="col-sm-8 pull-right text-right">
                 <button id="save-btn" type="submit" class="btn btn-primary">Save</button>
                 <button id="delete-btn" type="button" class="btn btn-danger">Delete</button>
