--- a/web/templates/resourceUpdateDialogTemplate.html
+++ b/web/templates/resourceUpdateDialogTemplate.html
@@ -32,8 +32,11 @@
                 </button>
             </div>
             <div class="col-sm-8 pull-right text-right">
-                <button id="save-btn" type="submit" class="btn btn-primary">Save</button>
-                <button id="delete-btn" type="button" class="btn btn-danger">Delete</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#save-modal">Save
+                </button>
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete-modal">
+                    Delete
+                </button>
                 <button id="cancel-btn" type="button" class="btn btn-default">Cancel</button>
             </div>
         </div>
@@ -55,5 +58,45 @@
         </button>
         <div class="row"><br></div>
         <div id="content">{{content}}</div>
+    </div>
+
+    <div id="delete-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">User action required</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Delete this resource?</p>
+                </div>
+                <div class="modal-footer">
+                    <button id="delete-btn" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div id="save-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">User action required</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Modify this resource?</p>
+                </div>
+                <div class="modal-footer">
+                    <button id="save-btn" type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
     </div>
 </form>
