- tree table implemented

--- a/web/templates/resourcesDataTableTemplate.html
+++ b/web/templates/resourcesDataTableTemplate.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-hover">
+<table class="tree table table-bordered table-hover">
     <thead>
     <tr>
         <th class="col-sm-3">Name</th>
