--- a/app/Resources/views/minventar.html
+++ b/app/Resources/views/minventar.html
@@ -34,17 +34,13 @@
         <button id="creation-button" type="button" class="btn btn-primary btn-lg">Create resource</button>
         <div class="row"><br></div>
 
-        <div class="row">
-            <div class="col-sm-1">
-                <div class="radio">
-                    <label class="active"><input
-                            id="resources-radio" type="radio" name="overviewtype" checked>Resources</label>
-                </div>
+        <div class="form-inline">
+            <div class="radio">
+                <label class="active"><input
+                        id="resources-radio" type="radio" name="overviewtype" checked>Resources</label>
             </div>
-            <div class="col-sm-2">
-                <div class="radio">
-                    <label><input id="resources-types-radio" type="radio" name="overviewtype">Resource types</label>
-                </div>
+            <div class="radio">
+                <label><input id="resources-types-radio" type="radio" name="overviewtype">Resource types</label>
             </div>
 
         </div>
