--- a/web/templates/resourceUpdateDialogTemplate.html
+++ b/web/templates/resourceUpdateDialogTemplate.html
@@ -46,16 +46,14 @@
     <div id="add-resource-dialog" class="form-group col-sm-6" style="visibility: hidden">
         <label class="control-label col-sm-3">Add resource:</label>
 
-        <div class="col-sm-5">
-
+        <div class="form-inline">
             <select id="new-resource" class="form-control" style="width: auto">
             </select>
-
+            <button id="add-resource" type="button" class="btn btn-link"><span
+                    class="glyphicon glyphicon-plus"
+                    style="color:#008000"></span>
+            </button>
         </div>
-        <button id="add-resource" type="button" class="btn btn-link"><span
-                class="glyphicon glyphicon-plus"
-                style="color:#008000"></span>
-        </button>
         <div class="row"><br></div>
         <div id="content">{{content}}</div>
     </div>
