- the user can now change between resource / type mode while the creation dialog is open - the backend service now checks if the mongo collections exist and creates them if they are missing

--- a/web/templates/resourceCreationDialogTemplate.html
+++ b/web/templates/resourceCreationDialogTemplate.html
@@ -1,5 +1,5 @@
 <div class="row"><br></div>
-<form id="creation-form" class="form-horizontal" role="form">
+<form id="resource-creation-form" class="form-horizontal" role="form">
     <div id="resource-creation-dialog" class="col-sm-6">
 
 
