--- a/web/templates/typeCreationDialogTemplate.html
+++ b/web/templates/typeCreationDialogTemplate.html
@@ -1,6 +1,6 @@
 <div id="type-creation-dialog" class="col-sm-6">
     <div class="row"><br></div>
-    <form id="creation-form" class="form-horizontal" role="form">
+    <form id="type-creation-form" class="form-horizontal" role="form">
         <div class="form-group">
             <label class="control-label col-sm-2">Name:</label>
 
