- added the licence header to all source files

--- a/app/Resources/views/minventar.html
+++ b/app/Resources/views/minventar.html
@@ -1,3 +1,18 @@
+<!-- This file is part of Minventar.
+
+    Category: inventory software
+    Package: Minventar_Frontend
+
+    Author: Daniel Schulz <daniel.schulz@fashion4home.de>
+
+    Copyright (c) 2015 by fashion4home GmbH <www.fashionforhome.de>
+    License: GPL-3.0
+    License http://opensource.org/licenses/GPL-3.0 GNU GENERAL PUBLIC LICENSE
+
+    Version: 0.1.0
+
+    Date: 22.09.2015
+    Time: 14:10-->
 <!DOCTYPE html>
 <html>
 <head lang="en">
